--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "connect-mongodb-session": "^2.4.1",
     "cors": "^2.8.5",
-    "dotenv": "^9.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7"
   },
   "devDependencies": {
